# detection

./: CMakeLists.txt  Capture.cpp  Capture.h  ContStruct.cpp  ContStruct.h  Detect.cpp  Detect.h  FileReader.cpp  FileReader.h  FolderReader.cpp  FolderReader.h  Frame.cpp  Frame.h  Main.cpp  PicLoader.cpp  PicLoader.h  README.md  RectStruct.cpp  RectStruct.h  Square.cpp  Square.h  TrackPoint.cpp  TrackPoint.h  Vortex.cpp  Vortex.h  detection.vcxproj  detection.vcxproj.filters  tmp.cpp
